--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe</title>
+    <title class="Title">Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -28,10 +28,10 @@
         <div class="box bb-0 br-0"><span class="boxtext"></span></div>
       </div>
       <div class="gameInfo">
-        <h1>Welcome to [TIC][TAC][TOE]</h1>
+        <h1>Play [TIC][TAC][TOE]</h1>
         <div>
           <span class="info">Turn for X</span>
-          <button id="reset">Reset</button>
+          <button id="reset">Restart</button>
         </div>
         <div class="imgbox">
           <img src="excited.gif" alt="" />
